# pyzanata

./: .gitignore  CHANGES.rst  MANIFEST.in  README.rst  setup.cfg
