[metadata]
name = pyzanata
version = 1.0b1
description = RESTAPI Client for the ZANATA translation web-service
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = zanata rest api client
author = Jens W. Klein
author_email = jk@kleinundpartner.at
url = https://pypi.python.org/pypi/pyzanata
license = BSD License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
include_package_data = True
install_requires =
    pyyaml
    requests
    setuptools
# thanks to this bug
# https://github.com/pypa/setuptools/issues/1136
# the following 2 lines w/o override in setup.py do not not work.
package_dir =
    = src
packages = find:
zip_safe = False
test_suite = pyzanata.tests.suite
tests_require =
    responses

[options.packages.find]
where =
    src

[options.extras_require]
test =
    responses
dev =
    pdbpp

[isort]
# for details see
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
